updated .yml file, ran python tests in docker container

--- a/analysis/Dockerfile
+++ b/analysis/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.8-slim
+FROM python:3.11-slim
 
 # Set the working directory in the container
 WORKDIR /usr/src/app
@@ -10,4 +10,7 @@ COPY . .
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# No need to expose ports or define a CMD as this container will be used for running scripts
+# Keep the container running for testing and development
+CMD tail -f /dev/null
+
+# No need to expose ports as this container will be used for running scripts
